mixing in styled components, fixed reactstrap elements not showing up

--- a/src/index.css
+++ b/src/index.css
@@ -27,13 +27,19 @@ main {
 .grid-view div.card.ui {
   margin: 1.25rem;
 }
-/*
+
 .main-img {
   display: block;
   border-radius: 100%;
   margin: 0 auto;
-} */
+  padding-bottom: 2.5%;
+}
 
 header h1 {
   text-align: center;
+}
+
+header h2 {
+  text-align: center;
+  padding: 2.5% 0;
 }
